[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Benjamin Schröder <Benjamin.Schroeder@haw-hamburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
raylib = "^4.2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

